--- a/web/src/components/app/charts/index.css
+++ b/web/src/components/app/charts/index.css
@@ -1,8 +1,8 @@
 .dialog-btn{
     border: none;
     margin-bottom: 5px;
-    background: #1f3d6c;
-    color:#fff;
+    background: #bccbde;
+    color:#000;
     border-radius: 8px;
     font-size: 0.8rem;
     font-weight: 700;
