--- a/web/src/components/app/Dialog/index.css
+++ b/web/src/components/app/Dialog/index.css
@@ -19,6 +19,7 @@ background: #1f3d6c;
 color:#fff;
 border:none;
 border-radius: 7px;
+cursor: pointer;
 height:1.5rem;
 width:3.5rem ;
 font-size: 0.8rem;
@@ -29,6 +30,7 @@ color:#fff;
 border: none;
 border-radius: 7px;
 height:1.5rem;
+cursor: pointer;
 width:3.5rem ;
 font-size: 0.8rem;
 }
@@ -48,6 +50,7 @@ font-size: 0.8rem;
     padding: 5px 5px;
     height: 2rem;
     width: 5rem;
+    cursor: pointer;
 }
 .action-btn-close{
     background:#ec5064 ;
@@ -57,6 +60,7 @@ font-size: 0.8rem;
     padding: 5px 5px;
     height: 2rem;
     width: 5rem;
+    cursor: pointer;
 }
 .btn-sub-div{
     display:flex;
